<resources>
    <string name="app_name">Cryptopportunity</string>
    <string name="text_btc_content"> 比特币（BitCoin）的概念最初由中本聪在2009年提出，根据中本聪的思路设计发布的开源软件以及建构其上的P2P网络。比特币是一种P2P形式的数字货币。点对点的传输意味着一个去中心化的支付系统。又称“比特金”，是一种网络虚拟货币，网民可以使用比特币购买一些虚拟物品，比如网络游戏当中的衣服、帽子、装备等，网民之间也有用来购买现实物品的情况。 </string>
    <string name="text_block">区块链是分布式数据存储、点对点传输、共识机制、加密算法等计算机技术的新型应用模式。 区块链（Blockchain），是比特币的一个重要概念，它本质上是一个去中心化的数据库，同时作为比特币的底层技术，是一串使用密码学方法相关联产生的数据块，每一个数据块中包含了一批次比特币网络交易的信息，用于验证其信息的有效性（防伪）和生成下一个区块。</string>
    <string name="text_video">金融投资亦称“证券投资”。经济主体为获取预期收益或股权，用资金购买股票、债券等金融资产的投资活动。金融投资既是一个领域又是一种方式，是发达的市场经济与信用的产物。最早的证券投资可追溯至15世纪的欧洲。20世纪80年代以来，证券投资已成为西方发达市场经济国家最基本的投资方式。当一经济主体通过发行股票、债券等证券筹资方式用以投入实质资产的维持与扩大时，购买证券者成为金融投资者。金融资产是其持有者对其出售者的股权和债权的凭证。</string>
    <string name="text_skill_content1">如何理解和使用止损是每一个投资者在交易中所必须面对和解决的问题，止损和交易的关系就如同药和病人的关系一样，是交易正常进行下去的必要保障，有些小病小灾也许我们还能不吃药就抗过去，但当大病来临之时，拒绝吃药、拒绝看病，其结果只有一个：向死亡靠拢。止损也是一样，有些小幅的波动也许你还能挺过来，但大势做反而不止损，其结果也只有一个：被市场清除出去。 止损的必要性 这是一个陈旧的话题，似乎人人皆知，然而，也正是因为太陈旧反而在交易中易被投资者忽略而不重视，巨大的亏损几乎都由于没有止损而造成，这种例子比比皆是，然而，期货市场却每天都在上演同样的悲剧。 波动性和不可预测性是市场最根本的特征，这是市场存在的基础，也是交易中风险产生的原因，这是一个不可改变的特征。交易中永远没有确定性，你的分析预测仅仅是一种可能性，根据这种可能性而进行的交易自然是不确定的，不确定的行为必须得有措施来控制其风险的扩大，止损就这样自然产生了。止损行为是人类在交易过程中自然产生的，并非刻意制作，是投资者保护自己的一种本能反应，市场的不确定性造就了止损存在的必要性和重要性。成功的投资者可能有各自不同的交易方式，但止损却是保障他们获取成功的共同特征，就如同健康的人有不同的生活方式，但是有病他们都会去治病一样。 为什么止损如此之难 止损的必要性人人皆知，然而止损为什么如此艰难？止损如割肉，追求快乐回避痛苦是人的本能，割肉自然是人类难以忍受的痛苦，然而，这仅仅是表面现象。市场的不确定性，价格的波动性常常使你弄不清楚这肉该不该割，如果肉割对了你也许还会窃喜，若割错了，则不仅会有肉体上的痛苦，账户资金的减少，更会使你有一种被愚弄的痛苦，心灵上的打击才是投资者最难以承受的痛苦。 割错肉的教训会使投资者非常谨慎地对待割肉，并且，市场价格的反复也使投资者经常割错肉。市场始终给人一种希望，这种希望就如同麻醉剂，在不断地麻痹投资者谨慎的心。在这种麻醉状态下，止损自然是难以执行。然而，这种希望却是那么的渺茫和不确定，但是只要有一线希望，投资者自然是不会轻易割肉的。除了割肉的痛苦和市场给予的希望使投资者难以止损外，无法确定对与错也是止损难以执行的重要原因。 严格来讲，我们恐怕永远无法确定自己的交易是处于正确状态还是错误状态，即便盈利了，我们也难以决定是立即出场还是持有观望，更何况是被套状态。人类追求完美的本能会使每一位投资者不愿意少赢几个点，更不愿意多亏几个点。上帝不会告诉你是否该立即出场！个人在市场面前是那么的弱小，所有的决策得由自己决定，这是一件非常棘手的工作，这也从客观上导致投资者难以止损出场。 如何正确理解止损 投资者难以接受的是错误的止损，如何正确理解止损，本质上就是如何正确理解错误的止损。笔者相信，若有上帝告诉你，你已经错了，你肯定会立即止损出场，但问题的关键是没有人可以明确地告诉你是否此次止损是对还是错。 错误的止损我们也应坦然接受。止损是一种成本，是寻找获利机会的成本，是交易获利所必须付出的代价，这种代价只有大小之分，难有对错之分，你要获利，就必须付出代价，包括错误止损所造成的代价。若你的止损都是正确的，那岂不意味着你的交易都是正确的，而你的交易都是正确的，那止损又意味着什么？ 坦然面对我们的错误，包括交易方向相反的错误，也包括错误的止损行为，把它们看成是交易行为的一个组成部分，也确实是交易过程的组成部分。不要回避，更不必恐惧，只有这样，你才能正常地交易下去，并且最终获利，这就是笔者对止损的理解，包括对错误止损的理解。过去的就让它过去，我们才能保证每次的交易都是崭新的，充满希望的。 如何使用止损 止损的使用绝不是如教科书所写的那样简单，止损更大程度上是一种艺术，完全因人而异，因投资者的交易风格而异，就如世界上不存在统一的交易模式一样，止损也没有统一的方式，就如不存在完美的交易一样，也不存在完美的止损。 止损是投资者交易行为的组成部分，是为交易系统服务的，绝不仅仅只是控制风险的。止损方式首先是适应投资者自己的而不是适合大众的和市场的，是个性化的行为。成熟的投资者都有自己的交易模式，相对应的，也有与此交易模式相匹配的止损方式，不能把止损同你的交易模式割裂开来单独使用，止损无法独立存在，独立存在的止损不具保护价值。狮子的自我保护方式和兔子完全不一样，交易也是如此。看图形构造的交易者有自己的止损点位设置，看趋势线的也有自己的止损价位，看波浪的同样有自己的止损设置，完全不尽相同。并且，同样的交易方式，也可因投资者承受风险的能力不同，交易的数量不同而可有不同的止损点设置，在此笔者不一一列举，只简单介绍一下自己的止损如何操作。 首先，止损点是动态的，不是静止的，随着价格的波动，止损也相应调整。其次，不同的单量止损点也不尽相同，但总亏损控制在总资金而不是进场资金的3％—5％之间。假设有10万元资金，若止损点只有10点，笔者可能进场50手，若止损点为50点，则只进场10手，若价格有利，则止损相应上调，若不利，则立即出场，不管对与错。笔者的止损方式是与自己的交易模式相匹配的，中间也有许多细节，但不管怎么讲，它是为交易系统服务的，绝不仅仅是控制风险的，这才是止损真正存在的价值和意义。</string>
    <string name="text_content_skill2">从事投机买卖必须承认中间有可能出错是不可避免的事情，才能在出错时及时投降，止损离场避免即小错成大错。弄到深陷泥足。 事实上，止损盘的作用是保护投资者在决策上出现错误时，减低损失的不二法门，我们常说一次意外足以致命，但若能够小心利用止损盘的话就可以化险为夷趋吉避凶。 举例说87年股灾令到很多人倾家荡产假如当时小心分析走势，摆放止损盘在市势逆转之前自动止损离场，就可安然度过一次前所未有的大灾难。那么摆放止损盘的技巧是怎样? 止损盘必须摆放在确认市势会逆转的地方，才足以发挥真正作用。 普通炒家，对止损盘的运用，通常最易范的毛病有三类。 第一，自以为长胜将军，不屑摆止损盘。 第二，心中有止损手中无止损盘。 第三，随意用一个金额作为止损盘。 对于第一类的炒家市场迟早会对其惩罚，无需讨论，当然绝对不可效法。 第二类心中有止损盘，起因在于害怕无端止损离场，待要离场才决定应否斩仓，但人性的弱点往往不肯认输，兼临时犹豫不决，因此没有事先摆设止损盘的后果是通常会将止损盘越降越低酿成大错，等到忍无可忍的时候才被迫平仓。 至于第三类人，随意以某一个金额作为止损盘，实在是自讨苦吃，举例说 a君沽空黄金愿意承受一千美元的损失，又想做三手合约，于是定下每张合约3点5美元的止损盘，最常见的情形，便是市势在触及A君的止损盘后金价才继续下跌，而a君本来有正确的投资方向，因为策略上的错误无端止损离场，正确的做法，是以图表分析作为摆放止损盘的基础将止损盘摆放于市势将会逆转的地方这样做有两个好处第一闯到止损盘就代表市势逆转止损离场是正确的投资态度，第二没有闯到止损盘，表示大势仍然一如所料的发展，手上持有的盘口，可以继续乘顺风车，享受赢钱赢到尽的乐趣。 至于如何选择适当的价位摆设止损盘就要视乎自己用的分析系统而定，比如波浪理论，形态分析，平均线，或电脑分析系统，都会有不同的计算方法。 总而言之，我们认为值得注意遵守的地方有如下的几点： 第一，必须在入市之前摆定止损盘，之后可以安心视察市势的发展。 第二，摆定止损盘之后，千万不可随意取消，或在失利的情况下将止损盘退后。 第三，要注意利用[众地莫企]的原理。如果大部分人都将止损盘摆设在同一个位置，远离一些重要价位避免一网打尽。 第四，入市方向正确时，可以将原定的止损盘的止损价位，跟随市势的发展逐步调整，保证既得利益的同时尽量赚取更多的利润，这时候，经调整的止损盘可称为止赚盘，例如沽金以后，金价下跌，可以将止赚盘逐步降低，保证记得利润和尽量多赚。</string>
    <string name="text_content_skill3">止损也分错误和正确的。正确还是错误，惟有交易系统才可衡量其正确性。 交易系统在发出止损信号时，是经过建立交易系统初期、中期、末期、优化、策略等综合性得出得一种有根据得止损，执行止损，即使亏损也是正确的，不执行止损，即使后期赢利也是错误的。 这里不是要说正确的止损是应该，在小资金时期，建立的交易系统里是不能有止损的介入，应该是采用某种策略，将止损从交易系统里暂时删除掉，当大资金时期，再加入止损。因为，小资金本来就小，如果不能一路上升，今天上，明天下，这样，要解决资金量问题就需要非常长的时期，这个时期很可能是下的多于上的，最后被市场淘汰出局。因此，止损固然重要，但是在交易系统框架下交易的话，是不应该有过多的止损出现，损失应采用资金管理来控制。 另外一种形式是不在交易系统框架下交易，止损是必须要严格执行的，它只会减慢资金损失，不会有助于赢利。止损的过度出现说明一个事实——赢利能力不够，这个时候不是继续交易的时期，反而应该离开市场，去建立、尝试其它交易手段和系统方法。同时，常常出现止损后立刻上升，正是说明对于市场的状态分析的不是十分准确，恰恰是在买入时是卖出的时机，在止损时时买入的时机，这些都应该在交易系统中解决，交易系统主要解决上升头部、下降底部、上升途中、下降途中所存在的各种可能性，这样可以最大限度的排除市场的风险和不确定性。 因此，止损在市场中并不是那么重要，尤其是严格执行交易系统的执行者。如果频繁止损，同样告诉我们一个信号——停止交易。</string>
    <string name="text_content_skill4">一个是结构止损；一个是资金管理止损。 前者设置在价格运动趋势的临界点上；后者设置在利润回吐或本金损失的预定幅度上。 前者基于止损是行情的否判断之趋势交易；后者则基于大盈小亏的资金管理策略。 很多人不会区分它们，自然也不能科学设置、使用它们。 最常见的错误是：跟踪止损本来是典型的资金管理止损，使用者却以结构止损的功能要求运用之。 ——结构止损是止损的同时反手交易，因为结构止损点就是趋势的转变点； ——跟踪止损则仅仅平仓出局，并不反手，因为跟踪止损并不表示趋势转变。 跟踪止损往往与“大幅度止盈、小幅度止损“的交易策略结合起来运用，具体的用法需要自己研究或大家讨论，并没有公开的套路可以效仿。 交易者真正的困惑往往是：面对当前价格相对于持仓方向的反向波动，究竟未来仅仅是一个调整还是新的趋势形成呢？本人以为，解决这个困惑必须使用结构止损。 移动止损和结构止损的设置方式、原理、目的甚至策略体系是很不同的，但二者也应该可以结合运用，譬如：以结构止损判别交易方向，以移动止损保护利润或成本。至于二者结合是否更好，则是另外问题了。本人倾向于简单操作，不愿意把交易条件复杂化，所以，不曾结合使用过它们。以上仅供您参考。</string>
    <string name="text_content_skill5">一个是结构止损；一个是资金管理止损。 前者设置在价格运动趋势的临界点上；后者设置在利润回吐或本金损失的预定幅度上。 前者基于止损是行情的否判断之趋势交易；后者则基于大盈小亏的资金管理策略。 很多人不会区分它们，自然也不能科学设置、使用它们。 最常见的错误是：跟踪止损本来是典型的资金管理止损，使用者却以结构止损的功能要求运用之。 ——结构止损是止损的同时反手交易，因为结构止损点就是趋势的转变点； ——跟踪止损则仅仅平仓出局，并不反手，因为跟踪止损并不表示趋势转变。 跟踪止损往往与“大幅度止盈、小幅度止损“的交易策略结合起来运用，具体的用法需要自己研究或大家讨论，并没有公开的套路可以效仿。 交易者真正的困惑往往是：面对当前价格相对于持仓方向的反向波动，究竟未来仅仅是一个调整还是新的趋势形成呢？本人以为，解决这个困惑必须使用结构止损。 移动止损和结构止损的设置方式、原理、目的甚至策略体系是很不同的，但二者也应该可以结合运用，譬如：以结构止损判别交易方向，以移动止损保护利润或成本。至于二者结合是否更好，则是另外问题了。本人倾向于简单操作，不愿意把交易条件复杂化，所以，不曾结合使用过它们。以上仅供您参考。</string>
    <string name="text_content_skill6">“金融大鳄”索罗斯在《索罗斯谈索罗斯》一书中回忆说，1944年是他人一中最快乐的一年，“我这样说是令人奇怪的，甚至会冒犯别人，因为1944年那是大屠杀的那一年，对一个14岁的男孩儿，那是一个人难得的激动人心的神奇经历。这是很有影响作用的，因为我从长辈那里了生存的技巧。这与我的投资生涯是有必然联系的。”这位犹太人索罗斯从小经历了“二战”法西斯的追杀，在恐惧和刺激中渡过了童年，形成了 独特的“生存技巧”他父亲教给他一些有关生存技巧的宝贵经验：“冒险没有关系，但当承担风险时，不要赌上全部有产。”在1992年的“英镑风暴”一战成名后对记者说：“我渴望生存，不愿意冒毁灭性的风险。” 期货、股票、外汇市场成功的人都是只有3%，这些期货、股票顶尖大师的故事，他们都 有一个共性是，就是尤其注意风险控制。共性就是说所以成功的人必须遵守的原则，所以你要想成为一个成功的投资者，就一定要遵循“风险控制”原则。 鳄鱼原则 成功的操盘手都遵循简单的交易原则---“鳄鱼原则”。该原则引自鳄鱼的吞噬方式：被咬的猎物越挣扎，鳄鱼的收获就越多。如果鳄鱼咬住你的脚，它等待你的挣扎。如果你用手帮忙挣脱你的脚，则它的嘴巴会同时咬住你的脚与手臂，你越挣扎，便咬得越 多。所以， 万一鳄鱼咬住你的脚，你惟一生存的机会就是牺牲一只脚，壮士短脚。当你在市场中被套，惟一的方法就是马上止损，无论你亏了多少，你越是加码就将套得越多。 项尖的投资大师都认识到，在市场中赔钱是交易的组成部分，关键是你明天有实力继续交易。 华尔街顶尖短线炒手马丁.舒华兹有一次做空SP500指数期货，由于共和党选举获胜，SP500股票期货指数快速地上升，马丁.舒华兹受个人的情绪控制，一路加码放空，到最后涨停还要加码，当天的亏损达到超纪录的100万美元。当天晚上在他太太和老师的疏导下，认识到：“只有先平掉原来的空头持仓，回到没有持仓的中立状态，这样你才能看清市场情况。并且做空也违背了自己的交易原则，移动平均线等指标都指示的是买入信号。”第二天果断平仓止损，使马丁.舒华兹重新回复理性，冷静地分析市场，在当月就将大部分的亏损弥补回来了，损失剩下5.7万美元了。在出现巨额亏损的情况下，人会变得极度困惑，失去理性的时候他太太和老师在扮演一个非常重要的角色，关键时刻拉了他一把，避免越陷越深。投资者在平时也需要一个这样一个充当“教世主”的人，当你在情绪失控的时候拉你一把。 如果发现弄错了，就应立刻纠正 在1987年10月19日股市崩盘的前一天，索罗斯量子基金首席基金经理斯坦利.德拉肯米勒犯下了令人难以置信的错误，由彻底做空股票转为130%的彻底做多股票，但在该月终了时他还是赚了，为什么？当他认识到他错定了的时候，他就在10月19日开市后第一个小时内果断地把所有的多头头寸平了仓，而且反手做空。如果他当时心胸狭窄一些，为了保留自己的面子，面对与己不利的证据仍维持自己原来的头寸，或者拖延等待，希望看看市场能否恢复的话，他就会遭受巨大的损失。这种善于承认错误，并毫不迟疑，毅然决然寻作出相应反应的能力，是一个伟大交易员的标志。 很多投资者对止损一直抱有抵触心态、回避心态和共同阵线心态。这3种心态投资者是导致没有止损的主要原因，如果投资者没有明确理解好，错误只能是一犯再犯，到死都不会改的。“抵触心态”是投资者在进入期货、股票、外汇市场时都是想来盈利的，不是想来亏损的，但是你想任何一个行业都有风险，就是吃饭这么简单的事情都有可能被骨头卡喉咙，做实业同样有风险，在美国发达的市场经济国家，每天倒闭的公司和新注册的公司一样多，古语“有人辞归故里，有人连夜赶科场。”而且实业一旦投入，就很难止损。很多投资者都是从实业积累了原始资金后再进入股票、期货、外汇市场，没有理解这个市场的特性，还是按照搞实业的思维模式。我有个做股票的朋友，搞酒楼几百万的投入，生意不好，首先装修、设备转手的时候就亏掉了一大笔，最后只剩下几十万出来。要想在市场中生存，就一定要按照赢家的思路，及时地止损，别和你的亏损投资谈恋爱。 “回避心态”是失败的投资者中风险控制的主要心结，绝大部分投资者在小亏5%、10%的时候就没有止损，到亏损逐步扩大到20%、30%、50%的时候不更舍不得止损了。最后的下场只有扫地出局。笔者接触很多投资者都有一种自欺欺人的想法，期货、股票我不平仓或者卖出，只是浮动亏损，无所谓，但是实际上浮动亏损和实际亏损是一样的，都记录你自己真正拥有的资产。 还有一种“抱着一起死共同阵线心态”，投资者在亏损的时候在，我身边的投资者也被套了，庄家也被套了，怕什么，顶多大家一起亏损。还有些投资者在交易场所大声地说，我套这么多，你们套这么少怕什么。这种消极的心态在投资者间相互蔓延，也是导致投资者没有及时止损的原因。 在华尔街被誉为“风险管理大师”的莱利.海特管理的投资基金一直保持很低的亏损率，公司的收益率平均年增长超过30%，按年度结算，最低的一年也赚了15%，如果以连续12个月作为结算期，亏损亦不超过计划的1%。在高风险的期货行当是少有的。莱利 海特从三个角度分析风险：面对风险、控制风险、回避风险。面对风险。在出现风险的时候马上及时处理，不能拖延。投资行业有名行话：“不怕错，最怕拖”。</string>
    <string name="text_content_skill7">如何理解和使用止损是每一个投资者在交易中所必须面对和解决的问题，止损和交易的关系就如同药和病人的关系一样，是交易正常进行下去的必要保障，有些小病小灾也许我们还能不吃药就抗过去，但当大病来临之时，拒绝吃药、拒绝看病，其结果只有一个：向死亡靠拢。止损也是一样，有些小幅的波动也许你还能挺过来，但大势做反而不止损，其结果也只有一个：被市场清除出去。 止损的必要性 这是一个陈旧的话题，似乎人人皆知，然而，也正是因为太陈旧反而在交易中易被投资者忽略而不重视，巨大的亏损几乎都由于没有止损而造成，这种例子比比皆是，然而，期货市场却每天都在上演同样的悲剧。 波动性和不可预测性是市场最根本的特征，这是市场存在的基础，也是交易中风险产生的原因，这是一个不可改变的特征。交易中永远没有确定性，你的分析预测仅仅是一种可能性，根据这种可能性而进行的交易自然是不确定的，不确定的行为必须得有措施来控制其风险的扩大，止损就这样自然产生了。止损行为是人类在交易过程中自然产生的，并非刻意制作，是投资者保护自己的一种本能反应，市场的不确定性造就了止损存在的必要性和重要性。成功的投资者可能有各自不同的交易方式，但止损却是保障他们获取成功的共同特征，就如同健康的人有不同的生活方式，但是有病他们都会去治病一样。 为什么止损如此之难 止损的必要性人人皆知，然而止损为什么如此艰难？止损如割肉，追求快乐回避痛苦是人的本能，割肉自然是人类难以忍受的痛苦，然而，这仅仅是表面现象。市场的不确定性，价格的波动性常常使你弄不清楚这肉该不该割，如果肉割对了你也许还会窃喜，若割错了，则不仅会有肉体上的痛苦，账户资金的减少，更会使你有一种被愚弄的痛苦，心灵上的打击才是投资者最难以承受的痛苦。 割错肉的教训会使投资者非常谨慎地对待割肉，并且，市场价格的反复也使投资者经常割错肉。市场始终给人一种希望，这种希望就如同麻醉剂，在不断地麻痹投资者谨慎的心。在这种麻醉状态下，止损自然是难以执行。然而，这种希望却是那么的渺茫和不确定，但是只要有一线希望，投资者自然是不会轻易割肉的。除了割肉的痛苦和市场给予的希望使投资者难以止损外，无法确定对与错也是止损难以执行的重要原因。 严格来讲，我们恐怕永远无法确定自己的交易是处于正确状态还是错误状态，即便盈利了，我们也难以决定是立即出场还是持有观望，更何况是被套状态。人类追求完美的本能会使每一位投资者不愿意少赢几个点，更不愿意多亏几个点。上帝不会告诉你是否该立即出场！个人在市场面前是那么的弱小，所有的决策得由自己决定，这是一件非常棘手的工作，这也从客观上导致投资者难以止损出场。 如何正确理解止损 投资者难以接受的是错误的止损，如何正确理解止损，本质上就是如何正确理解错误的止损。笔者相信，若有上帝告诉你，你已经错了，你肯定会立即止损出场，但问题的关键是没有人可以明确地告诉你是否此次止损是对还是错。 错误的止损我们也应坦然接受。止损是一种成本，是寻找获利机会的成本，是交易获利所必须付出的代价，这种代价只有大小之分，难有对错之分，你要获利，就必须付出代价，包括错误止损所造成的代价。若你的止损都是正确的，那岂不意味着你的交易都是正确的，而你的交易都是正确的，那止损又意味着什么？ 坦然面对我们的错误，包括交易方向相反的错误，也包括错误的止损行为，把它们看成是交易行为的一个组成部分，也确实是交易过程的组成部分。不要回避，更不必恐惧，只有这样，你才能正常地交易下去，并且最终获利，这就是笔者对止损的理解，包括对错误止损的理解。过去的就让它过去，我们才能保证每次的交易都是崭新的，充满希望的。 如何使用止损 止损的使用绝不是如教科书所写的那样简单，止损更大程度上是一种艺术，完全因人而异，因投资者的交易风格而异，就如世界上不存在统一的交易模式一样，止损也没有统一的方式，就如不存在完美的交易一样，也不存在完美的止损。 止损是投资者交易行为的组成部分，是为交易系统服务的，绝不仅仅只是控制风险的。止损方式首先是适应投资者自己的而不是适合大众的和市场的，是个性化的行为。成熟的投资者都有自己的交易模式，相对应的，也有与此交易模式相匹配的止损方式，不能把止损同你的交易模式割裂开来单独使用，止损无法独立存在，独立存在的止损不具保护价值。狮子的自我保护方式和兔子完全不一样，交易也是如此。看图形构造的交易者有自己的止损点位设置，看趋势线的也有自己的止损价位，看波浪的同样有自己的止损设置，完全不尽相同。并且，同样的交易方式，也可因投资者承受风险的能力不同，交易的数量不同而可有不同的止损点设置，在此笔者不一一列举，只简单介绍一下自己的止损如何操作。 首先，止损点是动态的，不是静止的，随着价格的波动，止损也相应调整。其次，不同的单量止损点也不尽相同，但总亏损控制在总资金而不是进场资金的3％—5％之间。假设有10万元资金，若止损点只有10点，笔者可能进场50手，若止损点为50点，则只进场10手，若价格有利，则止损相应上调，若不利，则立即出场，不管对与错。笔者的止损方式是与自己的交易模式相匹配的，中间也有许多细节，但不管怎么讲，它是为交易系统服务的，绝不仅仅是控制风险的，这才是止损真正存在的价值和意义。</string>
    <string name="text_recommend">推荐</string>
    <string name="text_allhours">7×24资讯</string>
    <string name="text_kuaixun">热点新闻</string>
    <string name="text_finance">财经科技</string>
    <string name="text_dubizixun">读币资讯</string>
    <string name="text_liandezixun">链得资讯</string>
    <string name="text_register_agree">我已同意本平台</string>
    <string name="text_register_xieyi">《用户注册协议》</string>
    <string name="o_text_home_bottom">交易由纽约商业、商品交易所及香港交易所等实盘对接。本产品属于高风险、高收益投资品种；投资者应具有较高的风险识别能力、资金实力与风险承受能力。</string>
    <string name="str_main">首页</string>
    <string name="o_text_shangpin">商品名称</string>
    <string name="language_cn">中文</string>
    <string name="language_en">English</string>
    <string name="text_language">语言切换</string>
    <string name="text_goback">返回</string>
    <string name="text_price">买入价格:</string>
    <string name="text_input_price">股票买入价格</string>
    <string name="text_amount">买入数量:</string>
    <string name="text_input_amount">股票买入数量</string>
    <string name="text_sell_price">卖出价格:</string>
    <string name="text_sell_input_price">股票卖出价格</string>
    <string name="text_sell_amount">卖出数量:</string>
    <string name="text_amount_sell_input">股票卖出数量</string>
    <string name="text_commission">佣金比率:</string>
    <string name="text_commission_input">券商佣金比率</string>
    <string name="text_print">印花税率:</string>
    <string name="text_print_input">印花税税率</string>
    <string name="text_settlement">结算费率:</string>
    <string name="text_settlement_input">结算费汇率</string>
    <string name="text_calculate">计算投资损益</string>
    <string name="text_calculate_result">投资损益结果</string>
    <string name="text_price_current">当前价</string>
    <string name="text_quote_change">涨跌幅</string>
    <string name="text_currency">精选币种</string>
</resources>