<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/o_bar_white"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_top"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/text_currency"
        android:textColor="@color/text_maincolor"
        android:textSize="15sp"
        android:textStyle="bold" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/margin_15"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_15"

            android:text="@string/o_text_shangpin"
            android:textColor="@color/text_c1c1"
            android:textSize="13sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_price_current"
            android:textColor="@color/text_c1c1"
            android:textSize="13sp"

            />

        <LinearLayout
            android:id="@+id/layout_up_down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_up_down"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_quote_change"
                android:textColor="@color/text_c1c1"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/img_up_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/o_market_up"
                android:layout_marginLeft="@dimen/margin_5"
                />

        </LinearLayout>


    </RelativeLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

</LinearLayout>