<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_price"
                    android:textSize="16sp"
                    android:textColor="@color/text_maincolor" />

                <EditText
                    android:id="@+id/edit_buyprice"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/text_input_price"
                    android:gravity="center"
                    android:maxLength="11"
                    android:textColor="@color/text_maincolor"
                    android:textColorHint="@color/text_secondcolor"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_amount"
                android:textSize="16sp"
                android:textColor="@color/text_maincolor"

                />
            <EditText
                android:id="@+id/edit_buyamt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/text_input_amount"
                android:maxLength="11"
                android:gravity="center"
                android:textColorHint="@color/text_secondcolor"
                android:textColor="@color/text_maincolor"
                android:textSize="14sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_sell_price"
                android:textSize="16sp"
                android:textColor="@color/text_maincolor" />
            <EditText
                android:id="@+id/edit_sellprice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/text_sell_input_price"
                android:maxLength="11"
                android:gravity="center"
                android:textColorHint="@color/text_secondcolor"
                android:textColor="@color/text_maincolor"
                android:textSize="14sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_sell_amount"
                android:textSize="16sp"
                android:textColor="@color/text_maincolor" />
            <EditText
                android:id="@+id/edit_sellamt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/text_amount_sell_input"
                android:maxLength="11"
                android:gravity="center"
                android:textColorHint="@color/text_secondcolor"
                android:textColor="@color/text_maincolor"
                android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_commission"
                    android:textSize="16sp"
                    android:textColor="@color/text_maincolor"/>
                <EditText
                    android:id="@+id/edit_blokerrate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/text_commission_input"
                    android:maxLength="11"
                    android:gravity="center"
                    android:textColorHint="@color/text_secondcolor"
                    android:textColor="@color/text_maincolor"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"

                    android:layout_gravity="center"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_print"
                    android:textSize="16sp"
                    android:textColor="@color/text_maincolor"/>
                <EditText
                    android:id="@+id/edit_stamptax"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/text_print_input"
                    android:gravity="center"
                    android:textColorHint="@color/text_secondcolor"
                    android:textColor="@color/text_maincolor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"

                    android:layout_gravity="center"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/jiesuanfei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:visibility="visible"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_settlement"
                    android:textSize="16sp"
                    android:textColor="@color/text_maincolor" />
                <EditText
                    android:id="@+id/edit_transferFee"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/text_settlement_input"
                    android:maxLength="11"
                    android:gravity="center"
                    android:textColorHint="@color/text_secondcolor"
                    android:textColor="@color/text_maincolor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/black"

                    android:layout_gravity="center"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_neiwai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="沪市A股"
                android:textColor="@color/text_maincolor"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btn_huansuan"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:background="@drawable/new_order_bg_mainclor"
                android:padding="10dp"
                android:text="@string/text_calculate"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>





        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"

            android:layout_weight="1"

            >

            <EditText
                android:id="@+id/edit_result"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/text_calculate_result"
                android:textColorHint="@color/text_maincolor"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:padding="15dp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:background="@color/home_line"
                android:visibility="visible" />

        </FrameLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>